Add DataContext Class exting DbContext to connect to EFCore Add DI, Configure Startup Class Add Connection String Setting in appsettings.json

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  
+  "ConnectionStrings": {
+    "DefaulConnection": "Data source=letschatwreactndncore.db"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
