--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,7 +1,7 @@
 {
   
   "ConnectionStrings": {
-    "DefaulConnection": "Data source=letschatwreactndncore.db"
+    "DefaultConnection": "Data source=letschatwreactndncore.db"
   },
   
   "Logging": {
