--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,14 +11,19 @@
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/revalidate": "^1.1.2",
     "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
+    "final-form": "^4.20.1",
     "mobx": "^5.15.6",
     "mobx-react-lite": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toastify": "^6.0.8",
+    "revalidate": "^1.2.0",
     "semantic-ui-react": "^1.2.1",
     "typescript": "^3.7.5",
     "uuid": "^8.3.0"
