--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,7 +18,9 @@
     "mobx": "^5.15.6",
     "mobx-react-lite": "^2.2.1",
     "react": "^16.13.1",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-final-form": "^6.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-cropper": "^1.3.0",
     "@types/uuid": "^8.3.0"
   }
 }
