--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,16 +10,18 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.48",
+    "@types/react-calendar": "^3.1.2",
     "@types/react-dom": "^16.9.8",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/revalidate": "^1.1.2",
     "axios": "^0.20.0",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.0.0-alpha.13",
     "final-form": "^4.20.1",
     "mobx": "^5.15.6",
     "mobx-react-lite": "^2.2.1",
     "react": "^16.13.1",
+    "react-calendar": "^3.1.0",
     "react-cropper": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
@@ -28,6 +30,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toastify": "^6.0.8",
+    "react-widgets": "^5.0.0-beta.21",
+    "react-widgets-date-fns": "^5.0.0-beta.8",
     "revalidate": "^1.2.0",
     "semantic-ui-react": "^1.2.1",
     "typescript": "^3.7.5",
