--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:letschat.database.windows.net,1433;Initial Catalog=letschat;Persist Security Info=False;User ID=appuser;Password=P@ssw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
 
   "Logging": {
