--- a/client-app/package.json
+++ b/client-app/package.json
@@ -33,7 +33,8 @@
     "react-widgets": "^5.0.0-beta.21",
     "react-widgets-date-fns": "^5.0.0-beta.8",
     "revalidate": "^1.2.0",
-    "semantic-ui-react": "^1.2.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.3.1",
     "typescript": "^3.7.5",
     "uuid": "^8.3.0"
   },
